[1.21.5] -> Increased delay in chest deposit to prevent server freezing up. Fixed all deprecated warnings. Added message before beginning `depostall` command because it can be slow sometimes, at least the user knows something is happening. Fixed null ref when you use `autosort` without args.